Add device zone lookup API
